Fixed the Oliver image alignment issue in Manage Partner grid view.

--- a/src/app/contacts/manage-contacts/manage-contacts.component.css
+++ b/src/app/contacts/manage-contacts/manage-contacts.component.css
@@ -479,3 +479,8 @@ h6 {
   height: 21px;
   object-fit: contain;
 }
+.oliverImgIcon {
+    width: 19px;
+    height: 19px;
+    filter: brightness(0) invert(1);
+}
